--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "postcss": "^5.2.6",
     "postcss-cssnext": "^2.9.0",
     "postcss-loader": "^1.1.1",
-    "postcss-scss": "^0.4.0",
     "pug": "^2.0.0-beta6",
     "pug-loader": "^2.3.0",
     "style-loader": "^0.13.1",
@@ -54,7 +53,5 @@
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
-  "dependencies": {
-    "whatwg-fetch": "^2.0.1"
-  }
+  "dependencies": {}
 }
