--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,7 @@
 	"extends": "airbnb",
 	"env": {
 		"browser": true,
-		"es6": true,
-		"jest": true
+		"es6": true
 	},
 	"rules": {
 		"brace-style": [2, "stroustrup", { "allowSingleLine": true }],
